@@ -1,6 +1,6 @@
-AUX supertransball2-1.5-ldflags.patch 397 RMD160 579b4d8728e70c7fc85d0514ef8d71177f1598a9 SHA1 885f8403127850cc31993b9800094a1f55f05e00 SHA256 f414c154e7dcae41f2b97c950bc4d9b02e884a32de7514bc3b2225a04c12b4ff
-DIST stransball2-v15-linux.zip 302212 RMD160 6e9e3c3ce7b85e1578fb55cdbf8b0e29bf305917 SHA1 5a1f5524fbd65b21da924d88f81002aad6c3ffd8 SHA256 2552a18b4b59c1d39d7a1312e7efbebf5ac89bddc30f5e188693e841516276bc
-DIST supertransball2_1.5-3.diff.gz 6592 RMD160 03e1485c58e6f3f80ff73aed8c973566634ee162 SHA1 1e75e95ae39640be8b8944ec1b9c4c6445c27061 SHA256 3c6cd528d29efee5d94d1ae8a322b086732b5348bcf01d1d6b6a84244ebc8fc8
-EBUILD supertransball2-1.5.ebuild 1641 RMD160 a7f1a38ac858a84ac66e8c00b1810fef5be4a354 SHA1 533fdedc6ba4d0a8a11c209dbf68719181c2afa5 SHA256 caeacc75a7eb8c7c13bfd763f144172e57f4b791b48fde946908a426ece1d1ad
-MISC ChangeLog 977 RMD160 245df6c6a718327682cef69af753616368af9f4a SHA1 74de4f66f58c59242a40fe25b73d7c184e00aa66 SHA256 f0a0afb853e72c641a91bf822c73aa751e9e1f29333b69ffd0276fc61d1d2814
-MISC metadata.xml 641 RMD160 6f524c0f42dc2bcd36c37363469577ace723b1f2 SHA1 67b1906abc69394ae533ce2d005184a140a8deda SHA256 2da29cc5ccec13eae783e618ba81ab5f70f28c75adf33b208e00a0734e4af1ea
+AUX supertransball2-1.5-ldflags.patch 397 SHA256 f414c154e7dcae41f2b97c950bc4d9b02e884a32de7514bc3b2225a04c12b4ff SHA512 a16655c44cd13cbcd1f9fa2b96104d42914c5a26cedff7abea65552610e95c6e71934a6f3b1d32d687993bcfe27b119b53d17c3881460bc0729d9267dd7998e4 WHIRLPOOL fcc8a1c28c1b539b00f3bdf2f2586f554bb46357636d040dfb9b405d632a6af545303f7150b79064e30c3d58c05991d65f7eaf05f6bd09127d09b571168d019e
+DIST stransball2-v15-linux.zip 302212 SHA256 2552a18b4b59c1d39d7a1312e7efbebf5ac89bddc30f5e188693e841516276bc SHA512 e87655dfca039c0c8553372b4da139f1d8fa420aad1909b422318dc049a9f7972c8d2398b83fde677b3eaf21d2d70fad73d7ec0c4b7bcbeacbf3544e6e575f6a WHIRLPOOL 69ba28ed603c4e2b6388766a1fac7913db6e265e7ae11803382b7f35d68113f852404bd61ab21dea13a6badab5d06ee6d131ff5b4e47c44f39a97f8cc50772f3
+DIST supertransball2_1.5-3.diff.gz 6592 SHA256 3c6cd528d29efee5d94d1ae8a322b086732b5348bcf01d1d6b6a84244ebc8fc8 SHA512 d8f0682633d8b20661a98d037430590c0f509205857644b28a7b56fc80011df8cd5dbbacf1142514b18dd471e6f79e515d981c025cb19a2288cd7bf46c0d1ba4 WHIRLPOOL c7ce46079528fc9ed379159a3f459c5feb109bf8bebf2bc34c1e2acedc8b6e12f9cc28051ba5c66b3c8b62f910c4646c96ee8bb87536a410ae167b03ed88e6ee
+EBUILD supertransball2-1.5.ebuild 1561 SHA256 e3ac8a74229faf0eae9d627c10603dbe17eb37faef4a1dd448f44359085130b6 SHA512 79a47c14f254aa8952a496fe9d40042887bcc3b3b3c662cecb23e75f4710b330f6e5fcf959b1567e2fc18e217f1587f41c1da2319fb7b732670297a92e3d15b7 WHIRLPOOL 2dd5afd2820425e32b6a74f825615c821dd626e9954c2f31339399b2c5b40acfae850b240f2c091c422c3492c1c6574ff286599f98a20f5f565dd433b3121e4e
+MISC ChangeLog 1074 SHA256 6ce07c666ad1622532fbffaaf33301076cb6ec40b498ecc0b505955d3b2af70f SHA512 e8e847365bc00cb6dcaaaada393a593e9defecfd4a4280a63255b989003deb043cd74eaed4a52a855dc16b90a114cc5333f9e2b39c43b675ed3862c14bcb1b10 WHIRLPOOL 33afd1e210626735bf610b8b1ceed9cac36e774b1b4263081883c36767fec011e0670098f749a99fdbde539004394200829cd8f53f74bb24a33820a1964ba122
+MISC metadata.xml 641 SHA256 2da29cc5ccec13eae783e618ba81ab5f70f28c75adf33b208e00a0734e4af1ea SHA512 4dfc9a1a8bafe254e3d41a4c6e6cd284941e67c01dd0e81e915598644236eaf7a208c10ad425509d90743877df8144c1145735bf9e19d8b0080147324f853d1c WHIRLPOOL 8502afca1e0e83bdc2655fb1065593644813d657e2cc7cba1a62564c0ea6641d340911dbf6fb3ba28cfe70e158d86cc81716b585cff53067edce91644497b5e9
