@@ -1,11 +1,12 @@
-DEFINED_PHASES=compile install postinst preinst setup unpack
-DEPEND=media-libs/libsdl media-libs/sdl-image media-libs/sdl-mixer media-libs/sdl-sound media-libs/sge app-arch/unzip
+DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
+DEPEND=media-libs/libsdl[sound,video] media-libs/sdl-image media-libs/sdl-mixer media-libs/sdl-sound media-libs/sge app-arch/unzip
 DESCRIPTION=Thrust clone
+EAPI=5
 HOMEPAGE=http://www.braingames.getput.com/stransball2/
 KEYWORDS=x86 ~x86-fbsd
 LICENSE=GPL-2
-RDEPEND=media-libs/libsdl media-libs/sdl-image media-libs/sdl-mixer media-libs/sdl-sound media-libs/sge games-misc/games-envd
+RDEPEND=media-libs/libsdl[sound,video] media-libs/sdl-image media-libs/sdl-mixer media-libs/sdl-sound media-libs/sge games-misc/games-envd
 SLOT=0
 SRC_URI=http://braingames.bugreport.nl/stransball2/stransball2-v15-linux.zip mirror://debian/pool/main/s/supertransball2/supertransball2_1.5-3.diff.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=978288c6fcb2e21886db2a5befd1979d
+_md5_=175e9ae342f914b1b4e21622ebd337e1
