@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst postrm prepare test
-DEPEND=dev-python/numpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pmw[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pyopengl[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] media-libs/freetype:2 media-libs/glew media-libs/libpng media-video/mpeg-tools sys-libs/zlib media-libs/freeglut apbs? ( sci-chemistry/apbs[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pdb2pqr[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pymol-apbs-plugin[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) web? ( !dev-python/webpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[tk] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+DEPEND=dev-python/numpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pyopengl[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] media-libs/freeglut media-libs/freetype:2 media-libs/glew media-libs/libpng:0= media-video/mpeg-tools sys-libs/zlib virtual/pmw[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] apbs? ( sci-chemistry/apbs[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pdb2pqr[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pymol-apbs-plugin[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) web? ( !dev-python/webpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[tk] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
 DESCRIPTION=A Python-extensible molecular graphics system
 EAPI=5
 HOMEPAGE=http://www.pymol.org/
 IUSE=apbs web python_targets_python2_7
 KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux ~x64-macos ~x86-macos
 LICENSE=PSF-2.2
-RDEPEND=dev-python/numpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pmw[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pyopengl[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] media-libs/freetype:2 media-libs/glew media-libs/libpng media-video/mpeg-tools sys-libs/zlib media-libs/freeglut apbs? ( sci-chemistry/apbs[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pdb2pqr[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pymol-apbs-plugin[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) web? ( !dev-python/webpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[tk] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+RDEPEND=dev-python/numpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pyopengl[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] media-libs/freeglut media-libs/freetype:2 media-libs/glew media-libs/libpng:0= media-video/mpeg-tools sys-libs/zlib virtual/pmw[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] apbs? ( sci-chemistry/apbs[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pdb2pqr[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] sci-chemistry/pymol-apbs-plugin[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) web? ( !dev-python/webpy[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[tk] ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~jlec/distfiles/pymol-1.7.0.0.png.xz http://dev.gentoo.org/~jlec/distfiles/pymol-1.7.4.0.tar.xz
 _eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	331701099758706863819fe3ff6ddc8a	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=982fb0437fbe72299e4a55d141cf0dc4
+_md5_=6f801d2b8f9e8fa16c3e9fd2c2d769ed
