@@ -5,26 +5,26 @@ AUX pymol-1.7.3.1-maeffplugin.cpp.patch 407 SHA256 852a4e0c104caf4ea2c297dcc25a5
 DIST pymol-1.7.0.0.png.xz 5392 SHA256 4c554a5c4f47946b6f7bae00209d5116305162534292735d30ae0794c56a8a0b SHA512 24bb1584b28688f5d5824e938f8500ca9887838adf490b4284c52f8c0da4c5ec4a56051ee80f48e4f34541ab53f9a4e00c849c382f1fd37c232fbea12d700105 WHIRLPOOL 395f978eb9ea3a8f8f39bf0694f71986ac9f8ebb307b90283c53fed85c4412d84e54af472f8646fcbd99c650039cb395a8f02b281168802c73ddb9bad175512b
 DIST pymol-1.7.0.1.tar.xz 6550492 SHA256 e8c6f6a465aec78171daf5cd981ebd1614dfa5e014e13c85a044cfbb591841c8 SHA512 a09277cd827f832c4f4e307f6117613d2ee8250643d129a5c34a30ceab2bfe8cea195c71a138fff09b6c69e9427153b917d7d3a7262d154ada5f323ec9635087 WHIRLPOOL 1803b55ade1b04de5963fd4a3bbe1354cda8759e15254c644952e25d7dcc904bc7b9fd91da75fdb8c6a96fd118a5a21bec9c8bba368744b44436747faca5cd9c
 DIST pymol-1.7.4.0.tar.xz 6528964 SHA256 5a732aeb8a02797a185f54c3bd8bb477a1a11976eb9f982f6cf79ce887ce3a4a SHA512 fa53e90413cb1e02797a30b21b4254901504edc029104567fd2d4c5ef630eb8c2eb9f5065b2b9e65f657aaa30ca8ac85c3314c6c7fbb89148d89a9a0964de3cf WHIRLPOOL 1467a9746abe60e371162e6065253fbb23453f80a4757a18936f5b6509f63657b7073ee5e118c7e4faf333371cd38c78917e1f4b0a3a684b4807972546180d69
-EBUILD pymol-1.7.0.1.ebuild 2539 SHA256 c75763c903f83703bd358286ae94b182b260c293f18d809825f1ba91556ee282 SHA512 dfc08e66f061a4e7b873eb16460673ed8bbb2d4130f767270f1fd40f234f06d4eb14f717df514a63ab16d6ef6184eb56f309dc6a8c8ad2afbdb32cbbb13b2a35 WHIRLPOOL c0390d4e79b7239d96925825d299c674bb3e16fe87cf3f456ecf6f145edbac5bab2c1c5c0915aed7b85ff0f674f3a171110130e0f78f8c6385a3c307dcf63dd2
-EBUILD pymol-1.7.4.0.ebuild 2821 SHA256 63cd5c552c78cadcfd392070558d92f7c46ab567062b460272c3228888e0a9c7 SHA512 dfca9ae9e6ec31a83920faee2597c467b2edf409f653f83b1fdd95318457b706091eacc367e541828540f7e54080d8b39e74d01cd5efb59a6ad90a86d25ccf0c WHIRLPOOL 84fac1ec944a9e52920963feb6bd30b0086d7dbc6738384bc0220bf0b1740a06cf94aaddaa3cfa649de4949a0a6239ee64f4f59eccd99bfe321378e0537c7707
-MISC ChangeLog 9017 SHA256 695cebb939e8facbc662b4605f985a8be17f94357b13bbc3a1c133dbd43dea3d SHA512 3835a1f0eaccd2fe100dade808b3f08ab5b495dcbe0cefae710dacaaf5886e607115c73b0a2c17cb6c7eea692defc62e90cfc36d76e846fb8e588c9d2c135bc8 WHIRLPOOL 75b6bcf34cc63653230983e82e3873895378a1f7e7f100a778265c6d0915fed82d5acc04c542463eba1fc0b579eebeda92e8f38eedd8feb2526b1343f5433fe1
+EBUILD pymol-1.7.0.1.ebuild 2541 SHA256 ab47b988c61132017846e34515a52eedb07daed8880dd2dd9487d95acf03317c SHA512 c6d058deb85d3814dce5ce74f633c7b197fd933b301980f5677e8dac38a244054639e9e319d7f0bde31ae9e1bf28ec9b1a2c7eff98dddef280553e0a43568197 WHIRLPOOL 1f3b54ca2e6c195fb409d4dc75e282519e35db9bd2cfdbd0102d528a9218356efbef352ff7ba08a96005c5b1e3ed8a7a3383b77fbf3f76d7050422eba6139246
+EBUILD pymol-1.7.4.0.ebuild 2818 SHA256 80a385b4ce0e158386269b7c87c208d0bf0ba304e3a0bbaee33651b46e301237 SHA512 4e137fb23a48c61c6f812ed509b77ebc241f9496ef17770c079d0900da9cbe46658162f26357ee11b76e29bee9323959fe1772a53073d5329c0fb2cf0b715d7d WHIRLPOOL b3fc6b37550ebe9ca3c705f1562e8a096617e8355b13477129fa081bea42a97f6f26e70c0cb301d6fbc10fe293dc1e12b872290b6ffa95d64a2fd450117dc30a
+MISC ChangeLog 9133 SHA256 3953bf2e997d67fb8dd09ce09ad66d035f617ef81f5321b7d0fb436b63f9c277 SHA512 6a7e0dbc0457de41f7cb05bd921baf5b83465c71741e6753dd39f15be6192b2a71a80af4196be079cc9ed84e01346a8602f74d74a7443a1e67a6c3e4ea7a8bca WHIRLPOOL 67e29a6260635c8f9ae9105bd33a187e534347c12cca98a3f10d73388d5f58c7ab0d76c0ff37c3191ad7d3c853dc905290e412f7374457e6b35f534da1cb31fc
 MISC metadata.xml 376 SHA256 4de13f45628d433a0e4fe6be267845e0337af9a3ddcafc04f889203b072dedbe SHA512 a10bdede05d83e9833dab7a4f3066cfd9e85e938dae32df09fea3df7be3d5cff63b2e20c476ad1dc8d1adff2c785e9510ee428814c0045ecf3a02c8c06cab025 WHIRLPOOL c065b66cd575bbcbdc9727cdfa25b62bcb41f7e00a94f44b3942d3c1ee9faf867749efcd5e0c9e6611c6566c43f63ace25a5d0ddee2dec534eb6de47cc537f17
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJUwL2qXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVBoKYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FViroAUP/jNuVNqW5voweJcmhXsj0JhM
-mqT1BDyyTeyY9pG9+JP/J2vYiGCCa8ygGZJ4EBhI4sUKQHJSdTosOkQOMemzQjnf
-H4xsLwtSt7eAleUlo3lABYJMtBhErbQ6Da48OyK6xQQvLfPkPZGGi5JeUTsKpHfY
-/UQuuXFT0waKfqj+RTKXVsKsP86+5rgSTiyvrCMUzngA6MHP+s8LLB77AVfAoIej
-dqhEecgZHwLIq2/tA75OA+nZucfyH5Ve3wcWfB9wjVZTE9tAgo7GZKe5y3MMWgMp
-9FKekMaJSiVkjPFmG1bB6omVISnwjZlLiHIdru62ee7s3nUxApVdq3b0X3wJMiy+
-OZH2gSP/ggsfeOnt5ygrlJipihQrC6n46c8mNr/pM9dd82oFdZb/aGjMMiULgEjL
-tnHbr2m6vxTg03KxOuM5xbfO/4PRZOK0tZH9Wg0uyXtYRs1F2fT5bmhprXVw+Ih6
-t2uZ/y1YmkG2r0XQI5FtNnLZoZcc2FB5Pa3xrRUMNuH1p9WzvzqcxyKyP+Z5sqnT
-gELgKH+ELnRIkrbGyPyKeW+Ew7AM/NC74GPOd8eJ6vBc/rYtQtQouGbBt5FhLgAd
-1m/Q6nagWzew7gGuj2bzyFpMNwMHH1kIdXrUNmUFgT/YjXVLo6ikVtsdCHC/rX4R
-fBY86GbDOyzLNQJzvuqb
-=2OSb
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirR8kP/3X2OjQrNxaU1DB1fSbDQVHL
+BvGN4YyMwH8hsxz6mrZ8USUGf+cLaZDD2CLgKNpPE3yRecoLMW04EANtdbAe5FUB
+EALPtByD/7nOIumdRbzOW6pCSTqFsocZ5eez/ycjbGbUZbTUlsizSfCbE0vUchGS
+TBFaLNUaw78A3dM5Mz0BTONod/FXft9ahRsUFlAc4e3CgdJ3zZFfXXwPZLRNV/IE
+lzmJMGheoA7+d6CO/GoZ9Tddhb7O/aX3TaE0tTjfYgSzx6Sckr+8HgmsCZ5cTijo
+NaeSeWoFrUvgpkx2RO1QXXiCeUua21Wcc9x5a2qaFxyffDIjxYqjpu9PpI1SDKje
+P6Frab4WfyAPlH9N0V1j2/IZ1kQ6unW99di6rm9TEAY+uzUiZ6HVOe195Fh9/rKD
+IswUXtMjBT3UlFKC9mfBi9WyMb/wlom+YcUiaAldnRE+lAP8PDtA8/g+m7+WRJNs
+xvxUQkaeM0u8LE/tNeDIF9cNHqHxigWYu4sTsoIjsnx7+JmB8F8E+L7xxKbNYA7w
+gVsDGQn5tg1KTrCUPN7JJeqAIVEdepMenA+y8lVfmGpHEHc4idxekt3r/TFasuIb
+OSpqtOZv0xa4gViakg5C0asaRVDWWQJuijnKogP5EgDsobex26whtT2cFgg02D0D
+SJWY3QLLff2IFfEMZ5f3
+=ktgw
 -----END PGP SIGNATURE-----
