@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/pymol
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.126 2015/01/22 09:06:49 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.127 2015/03/16 07:13:30 jlec Exp $
+
+  16 Mar 2015; Justin Lecher <jlec@gentoo.org> pymol-1.7.0.1.ebuild,
+  pymol-1.7.4.0.ebuild:
+  Move to virtual/pmw
 
   22 Jan 2015; Justin Lecher <jlec@gentoo.org> -pymol-1.5.0.3-r1.ebuild,
   -pymol-1.5.0.3-r2.ebuild, -pymol-1.6.0_rc1.ebuild, -pymol-1.6.0.0.ebuild,
